Slightly reduce word-spacing to prevent ugly breaks in address

--- a/Resources/Private/Scss/Sections/_substaff.scss
+++ b/Resources/Private/Scss/Sections/_substaff.scss
@@ -74,3 +74,8 @@
 		padding: 0 .5em;
 	}
 }
+
+.substaff_street-address {
+	// Hack allowing "Platz der Göttinger Sieben 1" to fit into a single line
+	word-spacing: -.05em;
+}
